--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: push back
+name: local save
 
 on:
   workflow_dispatch:
@@ -7,26 +7,27 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: checkout actions
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@main
+        with:
+          persist-credentials: false
+          fetch-depth: 0
 
-    - name: test1
-      run: |
-        python test1.py
-        echo "ok"
-
-    - name: commit
-      run: |
-        git config --global user.email "blackantt@gmail.com"
-        git config --global user.name "bk111"
-        git add .
-        git commit -m "update" -a
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: run py
+        run: |
+          python3 ./test1.py
+          
+      - name: commit
+        run: |
+          git config --global user.email "blackantt@gmail.com"
+          git config --global user.name "bk111"
+          git add .
+          git commit -m "update" -a
+          
+      - name: GitHub Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
