--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: local save
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 * * * *'
+  #schedule:
+    #- cron: '0 * * * *'
 
 jobs:
   build:
